--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -3,6 +3,12 @@
     src:url('../fonts/가는안상수체.ttf');
     font-weight:normal;
     font-style:normal;}
+@font-face{
+        font-family:consolas;
+        src:url("../fonts/consola.ttf");
+        font-weight:normal;
+        font-style:normal;
+}
 html{
     color: white;
     background-color: #000000;
@@ -52,10 +58,7 @@ a:link {
     color : pink;
     text-decoration: none;
   }
-  a:visited {
-    color : black;
-    text-decoration: none;
-  }
+
   a:hover {
     color : red;
     text-decoration: underline;
