--- a/styles/dwpage.css
+++ b/styles/dwpage.css
@@ -10,3 +10,47 @@ html{
     font-size:10px;
     font-family:consolas,monospace;
 }
+h1{
+    font-family:sans-serif;
+    font-size:2.0rem;
+}
+h2{
+    text-align:right;
+}
+h3{
+    font-size:1.2rem;
+}
+table{
+    border:1px solid;
+    border-color:white;
+}
+th, td{
+    border:1px solid;
+    border-color:#555555;
+    border-collapse:collapse;
+    padding:1px,5px;
+    text-align:center;
+}
+a:link {
+    color : pink;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color : red;
+    text-decoration: underline;
+  }
+  a:active {
+    color : green;
+    text-decoration: none;
+  }
+  h4{
+      display:flex;
+    align-content:flex-end;
+    border:1px solid;
+    border-color:white;
+}
+p{
+    text-align:left;
+    font-size:1.5rem;
+}
