--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -12,7 +12,8 @@
 html{
     color: white;
     background-color: #000000;
-    font-size:10px;}
+    font-size:10px;
+    font-family:sans-serif;}
 h1{
     text-align: center;
     font-size: 2.0rem;}
