--- a/styles/dwpage.css
+++ b/styles/dwpage.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family:consolas;
-    src:url("../fonts/consola.ttf");
+    src:url("../fonts/consola.f");
     font-weight:normal;
     font-style:normal;
 }
