--- a/styles/bpage.css
+++ b/styles/bpage.css
@@ -6,7 +6,22 @@ html{
 }
 h1{
     font-size:2.0rem;
-    
+}
+h2{
+  font-size:1.2rem;
+  text-align:right;
+}
+table{
+  width:750;
+  border: 1px solid #333333;
+  border-collapse:collapse;
+}
+th,td{
+  padding:10px;
+  text-align:center;
+}
+th{
+  background-color:#222222;
 }
 a:link {
     color : pink;
